--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "boilerplate",
-  "description": "A boilerplate for new project",
-  "version": "0.0.2",
-  "author": "roose <me@roose.kz> (http://roose.kz)",
-  "homepage": "https://github.com/roose/boilerplate",
-  "license": "MIT",
+  "name": "myproject",
+  "version": "0.3.0",
+  "description": "myproject",
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "roose",
+  "license": "ISC",
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-rename": "^1.2.0",
     "gulp-concat": "^2.4.2",
     "gulp-uglify": "^1.0.2",
-    "gulp-connect": "^2.2.0",
     "gulp-imagemin": "^2.0.0",
     "gulp-minify-css": "^0.3.11",
-    "jquery": "^1.11.1",
     "gulp-livereload": "^2.1.1",
-    "gulp-cache": "^0.2.4",
-    "gulp-notify": "^2.0.1",
-    "del": "^1.1.0"
+    "gulp-notify": "^2.1.0",
+    "gulp-clean": "^0.3.1",
+    "node-notifier": "^4.0.3",
+    "gulp-zip": "^2.0.2"
   }
 }
