--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "myproject",
-  "version": "0.4.2",
-  "description": "myproject",
+  "name": "boilerplate",
+  "version": "0.5.0",
+  "description": "boilerplate",
   "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/roose/boilerplate.git"
   },
-  "author": "roose",
+  "author": {
+    "name": "roose",
+    "url": "https://github.com/roose"
+  },
   "license": "ISC",
   "devDependencies": {
+    "del": "^1.1.1",
     "gulp": "^3.8.10",
-    "gulp-rename": "^1.2.0",
+    "gulp-bump": "^0.3.0",
     "gulp-concat": "^2.4.2",
-    "gulp-uglify": "^1.0.2",
     "gulp-imagemin": "^2.1.0",
-    "gulp-minify-css": "^0.3.11",
     "gulp-livereload": "^2.1.1",
-    "rimraf": "^2.3.2",
-    "gulp-zip": "^2.0.2"
+    "gulp-load-plugins": "^0.8.1",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-rigger": "^0.5.8",
+    "gulp-uglify": "^1.0.2",
+    "gulp-zip": "^2.0.2",
+    "rimraf": "^2.3.2"
   }
 }
