--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boilerplate",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "boilerplate",
   "main": "gulpfile.js",
   "repository": {
@@ -13,9 +13,9 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-core": "^5.1.9",
     "del": "^1.1.1",
     "gulp": "^3.8.10",
-    "gulp-bump": "^0.3.0",
     "gulp-concat": "^2.4.2",
     "gulp-imagemin": "^2.1.0",
     "gulp-livereload": "^2.1.1",
@@ -23,10 +23,12 @@
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
+    "gulp-postcss": "^5.1.1",
     "gulp-rename": "^1.2.0",
     "gulp-rigger": "^0.5.8",
     "gulp-uglify": "^1.0.2",
     "gulp-zip": "^2.0.2",
-    "rimraf": "^2.3.2"
+    "postcss-color-function": "^1.2.0",
+    "postcss-simple-vars": "^0.2.4"
   }
 }
