--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gulp-imagemin": "^2.1.0",
     "gulp-livereload": "^2.1.1",
     "gulp-load-plugins": "^0.8.1",
-    "gulp-minify-css": "^0.3.11",
+    "gulp-clean-css": "^2.0.7",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
     "gulp-postcss": "^5.1.1",
