--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "boilerplate",
-  "version": "0.8.0",
-  "description": "quzhat markup",
+  "version": "0.9.0",
+  "description": "boilerplate markup",
   "main": "gulpfile.js",
   "repository": {
     "type": "git",
@@ -13,37 +13,38 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@fancyapps/fancybox": "^3.1.25",
     "fancybox": "^3.0.0",
-    "jquery": "^1.12.4",
-    "slick-carousel": "^1.6.0"
+    "jquery": "^3.2.1",
+    "save": "^2.3.1",
+    "slick-carousel": "^1.7.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
+    "autoprefixer": "^7.1.4",
     "bootstrap-grid": "^2.0.1",
-    "browser-sync": "^2.18.8",
-    "csswring": "^5.1.1",
-    "del": "^2.2.2",
+    "browser-sync": "^2.18.13",
+    "csswring": "^6.0.1",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-changed": "^2.0.0",
-    "gulp-imagemin": "^3.1.1",
+    "gulp-changed": "^3.1.0",
+    "gulp-file-include": "^1.2.0",
+    "gulp-imagemin": "^3.3.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-main-npm-files": "^1.0.5",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-plumber-error-handler": "^1.0.0",
     "gulp-plumber-notifier": "^0.0.3",
-    "gulp-postcss": "^6.3.0",
-    "gulp-pug": "^3.3.0",
+    "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.4.1",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-svg-symbols": "^2.0.2",
-    "gulp-uglify": "^2.1.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-watch": "^4.3.11",
     "gulp-zip": "^4.0.0",
     "normalize-css": "^2.3.1",
-    "precss": "^1.4.0",
-    "run-sequence": "^1.2.2",
-    "stylelint": "^7.9.0",
-    "sugarss": "^0.2.0"
+    "postcss": "^6.0.12",
+    "precss": "^2.0.0",
+    "stylelint": "^8.1.1"
   }
 }
