--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "boilerplate",
+  "name": "blocks_test",
   "version": "0.9.2",
-  "description": "boilerplate markup",
+  "description": "blocks_test markup",
   "main": "gulpfile.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/roose/boilerplate.git"
+    "url": "https://github.com/roose/blocks_test.git"
   },
+  "scripts": {
+    "start": "gulp",
+    "build": "cross-env NODE_ENV=production npm start build"
+},
   "author": {
     "name": "roose",
     "url": "https://github.com/roose"
@@ -21,11 +25,15 @@
     "autoprefixer": "^9.1.5",
     "bootstrap-grid": "^3.0.1",
     "browser-sync": "^2.24.7",
+    "cross-env": "^5.2.0",
     "csswring": "^7.0.0",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-changed": "^3.2.0",
+    "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.0.1",
+    "gulp-html-beautify": "^1.0.1",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-main-npm-files": "^1.0.5",
@@ -34,7 +42,9 @@
     "gulp-plumber-error-handler": "^1.0.0",
     "gulp-plumber-notifier": "^0.0.3",
     "gulp-postcss": "^8.0.0",
+    "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-symbols": "^3.2.0",
     "gulp-uglify": "^3.0.1",
@@ -42,7 +52,9 @@
     "gulp-zip": "^4.2.0",
     "normalize-css": "^2.3.1",
     "postcss": "^7.0.2",
+    "postcss-easy-import": "^3.0.0",
     "precss": "^3.1.2",
+    "pug": "^2.0.3",
     "stylelint": "^9.5.0"
   }
 }
